<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminAddNewDoctorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            style="@style/SubTitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_doctor_registration"
            android:textColor="@color/colorPrimaryVariant" />

        <EditText
            android:id="@+id/edtDoctorName"
            style="@style/BodyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edt_bg_one"
            android:hint="@string/doctor_s_full_name"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:padding="14dp"
            android:textColor="@color/colorPrimaryVariant" />

        <EditText
            android:id="@+id/edtDoctorEmail"
            style="@style/BodyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/edt_bg_one"
            android:hint="@string/doctor_s_email"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@color/colorPrimaryVariant" />

        <EditText
            android:id="@+id/edtDoctorPhNum"
            style="@style/BodyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/edt_bg_one"
            android:hint="@string/doctor_s_phone_number"
            android:textColorHint="@color/gray"
            android:inputType="number"
            android:padding="14dp"
            android:textColor="@color/colorPrimaryVariant" />

        <Spinner
            android:id="@+id/spinnerDoctorSpecialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:popupBackground="@color/colorVariant"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/edtDoctorQualification"
            style="@style/BodyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/edt_bg_one"
            android:hint="@string/doctor_s_qualification"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@color/colorPrimaryVariant" />

        <Button
            android:id="@+id/btnConfirm"
            style="@style/BodyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryVariant"
            android:paddingVertical="14dp"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>