<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".common.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo" />

        <TextView
            style="@style/TitleTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryVariant" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="50dp"
            android:hint="@string/your_email"
            app:hintTextColor="@color/gray"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrimaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/BodyTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryVariant" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFieldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:hint="@string/your_password"
            app:hintTextColor="@color/gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryVariant"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/colorPrimaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/BodyTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryVariant" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/BodyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryVariant"
            android:text="@string/login"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/BodyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryVariant"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>