<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminPatientListFragment">

    <LinearLayout
        android:id="@+id/linearHeaders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="@drawable/table_header_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/BodyTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient_information"
            android:textStyle="bold" />

        <TextView
            style="@style/BodyTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monitored_by"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvEmptyPatientList"
        style="@style/SubTitleTextAppearance"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/no_registered_patients_message"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearHeaders" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAdminPatientList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="5dp"
        style="@style/BodyTextAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearHeaders" />

</androidx.constraintlayout.widget.ConstraintLayout>