<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient.PatientDoctorListFragment">

    <LinearLayout
        android:id="@+id/linearSearchDoctors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="@drawable/edt_bg_one"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtSearchDoctors"
            style="@style/BodyTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:hint="@string/search_doctors_hint"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:padding="14dp"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinnerDoctorCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:popupBackground="@color/colorVariant"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.MaterialComponents.CircularProgressIndicator"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearSearchDoctors" />

    <TextView
        android:id="@+id/tvEmptyDoctorList"
        style="@style/SubTitleTextAppearance"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/no_results_found"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearSearchDoctors" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDoctorList"
        style="@style/BodyTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="14dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearSearchDoctors"
        app:rightBgColor="@color/red"
        app:rightImage="@drawable/ic_delete"
        app:rightText="Delete"
        app:textColor="@color/white"
        tools:listitem="@layout/single_admin_doctor_info_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMyDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/my_doctor_list"
        android:src="@drawable/ic_doctor"
        app:backgroundTint="@color/colorPrimary"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>